--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+logging=/tmp/supervisord.log
 
 [program:php5-fpm]
 command=/usr/sbin/php5-fpm --nodaemonize
@@ -12,4 +13,3 @@ command=/usr/bin/php /var/www/update_daemon2.php
 user=www-data
 stdout_logfile=/tmp/%(program_name)s.stdout
 stderr_logfile=/tmp/%(program_name)s.stderr
-
